--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: ^6.2.1
   font_awesome_flutter: ^10.7.0
   google_auth: ^0.0.3
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
