--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   google_auth: ^0.0.3
   get: ^4.6.6
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
