--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   google_auth: ^0.0.3
   get: ^4.6.6
   http: ^1.2.1
+  location: ^6.0.2
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
